# UA-for-Industrial-Joining-Technologies

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  SECURITY.md  SKILLS.md  constraints.txt  pyproject.toml  renovate.json  run_all_tests.py
OPC_UA_Clients/Release2/IJT_Console_Client/: .cursorrules  .pylintrc  .setup_timestamp  README.md  client_config.py  conftest.py  docker_freshness.py  event_handler.py  event_types.py  ijt_logger.py  main.py  method_caller.py  opcua_client.py  opcua_security_support.py  pyproject.toml  pyrightconfig.json  pytest.ini  requirements-dev.txt  requirements.txt  result_event_handler.py  run_all_tests.py  security_matrix_support.py  serialize.py  serialize_data.py  setup_client.py  test_output.txt  utils.py
OPC_UA_Clients/Release2/IJT_Console_Client/.github/: copilot-instructions.md
OPC_UA_Clients/Release2/IJT_Console_Client/docs/: SKILLS.md  methods-usage.md
OPC_UA_Clients/Release2/IJT_Console_Client/tests/: conftest.py  opcua_security.users.yaml  test_client_config_and_main.py  test_event_handler.py  test_method_caller.py  test_result_event_handler.py  test_serialize_data.py  test_utils.py
OPC_UA_Clients/Release2/IJT_Test_Client/: .cursorrules  .pylintrc  AGENTS.md  README.md  conftest.py  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_all_tests.py  run_target_server_cu.py  run_tests.py  server_capabilities.simulator.yaml  server_capabilities.yaml
OPC_UA_Clients/Release2/IJT_Test_Client/assets/: test_asset_associations.py  test_asset_health.py  test_asset_identification.py  test_asset_interfaces.py  test_asset_lifetime_counters.py  test_asset_management_structure.py  test_asset_monitoring.py  test_asset_operation_counters.py
OPC_UA_Clients/Release2/IJT_Test_Client/common/: test_namespace_registration.py  test_server_connection.py
OPC_UA_Clients/Release2/IJT_Test_Client/conformance/: test_asset_identifier_methods.py  test_asset_joining_variable_nodes.py  test_asset_management.py  test_asset_operations.py  test_consolidated_results.py  test_cu_asset_management.py  test_cu_event_management.py  test_cu_joining_process.py  test_cu_joint_management.py  test_cu_result_management.py  test_engineering_units.py  test_event_condition_catalog.py  test_events.py  test_feedback_and_io.py  test_identifiers.py  test_joining_process.py  test_joining_system_base.py  test_joining_system_condition_methods.py  test_joint_management.py  test_result_access.py  test_result_identifiers.py  test_result_management.py  test_result_timing.py  test_result_trace_data.py  test_single_result_data.py
OPC_UA_Clients/Release2/IJT_Test_Client/docs/: REPORT_GLOSSARY.md  SKILLS.md  TestCases_OPC 40450-1 UA CS for Joining Systems - Part 1 - Base 1.01.0.xlsm  development-log.md  opc-ua-server-context.md  test-results.md
OPC_UA_Clients/Release2/IJT_Test_Client/events/: test_event_types_structure.py  test_joining_system_events.py  test_simulate_events.py
OPC_UA_Clients/Release2/IJT_Test_Client/helpers/: address_space.py  cu_compliance_report.py  cu_coverage_report.py  cu_evidence_map.py  cu_registry.py  event_collector.py  event_payload.py  event_validator.py  git_info.py  identifier_utils.py  method_caller.py  method_signature.py  namespaces.py  node_discovery.py  profile_loader.py  reference_workflow.py  report_scoring.py  result_collector.py  result_navigation.py  result_validator.py  server_manager.py  skip_reasons.py  target_server_cu_config.py  target_server_readiness.py  target_server_triggers.py  trigger.py  workbook_traceability.py
OPC_UA_Clients/Release2/IJT_Test_Client/joining_process/: test_joining_process_methods.py  test_joining_process_structure.py
OPC_UA_Clients/Release2/IJT_Test_Client/joint/: test_joint_management_structure.py  test_joint_methods.py
OPC_UA_Clients/Release2/IJT_Test_Client/profiles/: asset_management.yaml  basic_joining_system.yaml  facets.yaml  full_conformance.yaml  full_specification_coverage.yaml  general_joining_system.yaml
OPC_UA_Clients/Release2/IJT_Test_Client/reference_workflows/: README.md  reference_joining_process_workflow.yaml
OPC_UA_Clients/Release2/IJT_Test_Client/results/: test_result_events.py  test_result_management_structure.py  test_result_retrieval.py  test_simulate_results.py
OPC_UA_Clients/Release2/IJT_Test_Client/scripts/: make_ci_summary.py  make_conformance_summary.py  make_excel_report.py  make_specification_test_summary.py  run_reference_workflow.py  triage_cu_compliance.py  triage_cu_specification_test.py
OPC_UA_Clients/Release2/IJT_Test_Client/specification_tests/: test_asset_identifier_methods.py  test_asset_joining_variable_nodes.py  test_asset_management.py  test_consolidated_results.py  test_engineering_units.py  test_event_condition_catalog.py  test_feedback_and_io.py  test_identifiers.py  test_joining_system_base.py  test_joint_management.py  test_result_access.py  test_result_identifiers.py  test_result_management.py  test_result_timing.py  test_result_trace_data.py  test_single_result_data.py
OPC_UA_Clients/Release2/IJT_Test_Client/target_server_cu_profiles/: README.md  example_manual_trigger.yaml  example_remote_start.yaml  example_simulation_methods.yaml  template.yaml
OPC_UA_Clients/Release2/IJT_Web_Client/: .cursorrules  .dockerignore  .env  .env.example  .pylintrc  .stylelintrc.json  Dockerfile  HEALTH_CHECK.md  HEALTH_CHECK_REPORT.md  Makefile  PRODUCT.md  README.md  USING_AGENTS.md  config.js  conftest.py  cross_client_regression_report.json  docker-compose.yaml  docker-compose.yml  dockerignore  eslint.config.js  eslint.config.mjs  index.html  index.py  lint-output.txt  network_utils.py  nodeStyle.css  package-lock.json  package.json  playwright.compatibility-smoke.config.mjs  playwright.config.mjs  playwright.l2-compat.config.mjs  pyproject.toml  pyrightconfig.json  pytest.ini  rebuild_and_run.ps1  requirements-dev.txt  requirements.txt  run_all_tests.py  run_cross_client_regression.py  run_docker_setup.py  (+4 more)
OPC_UA_Clients/Release2/IJT_Web_Client/.githooks/: pre-push
(+1109 files in other folders)
