[project]
requires-python = ">=3.14"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
pythonpath = ["."]
# Test Client has no tests/ dir — suites live at project root in named subdirs.
testpaths = ["tests/unit", "conformance", "assets", "joining_process", "results", "joint", "events", "common"]
python_files = ["test_*.py"]
addopts = "-v --basetemp=tmp/pytest -p no:cacheprovider"
tmp_path_retention_policy = "failed"
timeout = 120
markers = [
    "live: Tests requiring a running OPC UA server",
    "structure: Address space structure tests (read-only, no state changes)",
    "methods: Method call tests (trigger simulation — state changes expected)",
    "events: Event subscription and notification tests",
    "conformance: Full IJT specification conformance scenarios",
    "negative: Negative tests verifying that invalid operations are rejected",
]

[tool.bandit]
exclude_dirs = [".venv", ".venv_test", ".venv_wsl", ".venv_wsl_backup", "tests", "__pycache__", ".git"]
skips = ["B101"]

[tool.vulture]
# Vulture finds dead code in source. Tests are excluded because pytest fixture
# injection makes parameter names appear "unused" — they are not; pytest wires
# them by name. Scanning tests adds only false positives with no value.
exclude = ["tests/", "conftest.py", ".venv/", ".venv_test/", "tmp/", "test-results/", "logs/"]
ignore_decorators = ["@pytest_asyncio.fixture", "@pytest.fixture", "@pytest.fixture(scope='session')", "@pytest.fixture(scope='function')"]

[tool.interrogate]
# 65% minimum docstring coverage (committed baseline was 60%; kept higher).
# Measures all Python files. Increase gradually as coverage improves.
fail-under = 65
ignore-init-method = true
ignore-magic = true
ignore-semiprivate = true
ignore-private = true
verbose = 0

[tool.ruff]
# Intentionally overrides root pyproject.toml: line-length=120 (matches existing code style)
# and select=["E","F","I"] (minimal rules; security/complexity rules not enforced here).
target-version = "py314"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501", "E402", "E731"]

[tool.coverage.run]
# The unit stage is always skipped (no tests/unit/ directory exists).
# This omit list applies to the live conformance stage; runner is excluded from measurement.
omit = [
    "run_all_tests.py",
    ".venv/*",
    ".venv_test/*",
]

[tool.coverage.report]
# Floor set at 65% — new integration-only helpers (result_validator, profile_loader,
# server_manager) are covered by live tests but not unit tests, pulling total down.
# Raise this floor as dedicated unit tests are added for those helpers.
fail_under = 65
skip_empty = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]

[tool.pylint.main]
# sys.path insert ensures conformance test modules resolve when pylint runs from project root.
init-hook = "import sys; sys.path.insert(0, '.')"

[tool.pylint.messages-control]
disable = [
    "import-outside-toplevel",
    "wrong-import-position",
    "import-error",            # false positive: conformance modules resolve via pythonpath = ["."]
    "broad-exception-caught",  # OPC UA can raise many exception types; broad catch is intentional
    "unused-argument",         # pytest fixtures injected by name; can't use _
    "not-callable",
    "invalid-name",            # OPC UA PascalCase event fields and NodeIds
    "line-too-long",           # enforced by ruff line-length instead
    "missing-function-docstring",
    "disallowed-name",         # test scaffolding uses short names
    "too-few-public-methods",
    "too-many-public-methods",
    "too-many-instance-attributes",
    "too-many-statements",
    "too-many-branches",
    "too-many-return-statements",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-locals",
    "consider-using-with",
    "duplicate-code",
    # Conformance test files are inherently large — splitting would break readability
    "too-many-lines",
    # Local imports inside helper functions shadow top-level imports — intentional test pattern
    "reimported",
    # Fixture parameter names shadow module-level imports — standard pytest convention
    "redefined-outer-name",
    # Optional loop vars are sometimes retained for diagnostics in assertions/logging.
    "unused-variable",
    # Direct lambda calls used in test parametrize scaffolding
    "unnecessary-direct-lambda-call",
    # not (expr) style is sometimes clearer in assertion messages
    "superfluous-parens",
]

[tool.pylint.format]
max-line-length = 120
max-module-lines = 1200

[tool.mypy]
explicit_package_bases = true
ignore_missing_imports = true
# Exclude pytest bookkeeping dirs that may be locked on Windows.
exclude = ["pytest-cache-files-.*"]

[tool.pyright]
# asyncua 1.2b2 uses class-based OPC UA primitive types (Int32, UInt32, etc.)
# that inherit from int/str/bytes. Plain int literals are not directly assignable
# to these types in pyright's type system, but are equivalent at runtime. Remove
# reportArgumentType suppression when asyncua ships stable 1.2.0 with corrected stubs.
reportArgumentType = "none"
# asyncua does not declare __all__ for its re-exported OPC UA constants
# (AttributeIds, StatusCodes, ObjectIds, etc.) — they are importable at runtime.
reportPrivateImportUsage = "none"
# asyncua DataValue.Value and Variant.Value are typed Optional but are always
# populated when an OPC UA read call returns successfully. Tests guard on read
# success before accessing .Value, so None-access is not possible at runtime.
reportOptionalMemberAccess = "none"
reportOptionalIterable = "none"
# IJT custom OPC UA data types (JoiningProcessIdentificationDataType, etc.) are
# generated from the spec and registered at runtime via asyncua type dictionary;
# they are not visible in asyncua's static type stubs.
reportAttributeAccessIssue = "none"
# asyncua DataValue bitwise ops (e.g. AccessLevel & 0x02) are valid at runtime;
# pyright cannot infer the int-compatible return type from asyncua's Optional stubs.
reportOperatorIssue = "none"

[[tool.mypy.overrides]]
# helpers/ contains generated OPC UA type stubs — too many unresolvable imports to check.
module = "helpers.*"
ignore_errors = true

[[tool.mypy.overrides]]
# run_all_tests.py uses sys/subprocess/platform APIs that vary; not worth strict checking.
module = "run_all_tests"
ignore_errors = true
